--- a/nested_stacks/elasticsearch/template.yaml
+++ b/nested_stacks/elasticsearch/template.yaml
@@ -568,14 +568,14 @@ Resources:
                     }
                   },
                   "entities": {
+                    "type": "keyword"
+                  },
+                  "raw_entities": {
                     "properties": {
                       "text": { "type": "keyword" },
                       "type":  { "type": "keyword" },
                       "score":  { "type": "double" }
                     }
-                  },
-                  "entities_text": {
-                    "type": "keyword"
                   },
                   "key_phrases": {
                     "type": "keyword"
