--- a/nested_stacks/container_repo/template.yaml
+++ b/nested_stacks/container_repo/template.yaml
@@ -197,7 +197,7 @@ Resources:
             pre_build:
               commands:
                 - echo Logging in to Docker Hub...
-                - echo $DOCKERHUB_PASSWORD | docker login -u $DOCKERHUB_USERNAME --password-stdin
+                - echo $DOCKERHUB_PASSWORD | docker login -u $DOCKERHUB_USERNAME --password-stdin || exit 0
                 - echo Logging in to Amazon ECR...
                 - $(aws ecr get-login --no-include-email)           
             build:
