add cluster:monitor/state https://docs.aws.amazon.com/quicksight/latest/user/elasticsearch.html#elasticsearch-permissions

--- a/nested_stacks/elasticsearch/template.yaml
+++ b/nested_stacks/elasticsearch/template.yaml
@@ -474,6 +474,7 @@ Resources:
           "cluster_permissions": [
             "cluster:monitor/main",
             "cluster:monitor/health",
+            "cluster:monitor/state",
             "indices:data/read/scroll",
             "indices:data/read/scroll/clear"
           ]
