--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "post-compile": "npx projen post-compile",
     "pre-compile": "npx projen pre-compile",
     "synth": "npx projen synth",
+    "synth:silent": "npx projen synth:silent",
     "test": "npx projen test",
     "test:update": "npx projen test:update",
     "test:watch": "npx projen test:watch",
@@ -24,10 +25,10 @@
   },
   "devDependencies": {
     "@types/jest": "^27.4.0",
-    "@types/node": "^14.17.0",
+    "@types/node": "^12",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
-    "aws-cdk": "^1.129.0",
+    "aws-cdk": "^2.5.0",
     "esbuild": "^0.14.11",
     "eslint": "^8",
     "eslint-import-resolver-node": "^0.3.6",
@@ -43,16 +44,15 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
-    "@aws-cdk/assert": "^1.129.0",
-    "@aws-cdk/core": "^1.129.0"
+    "aws-cdk-lib": "^2.5.0",
+    "constructs": "^10.0.5"
   },
-  "bundledDependencies": [],
   "license": "Apache-2.0",
   "version": "0.0.0",
   "jest": {
     "testMatch": [
-      "**/__tests__/**/*.ts?(x)",
-      "**/?(*.)+(spec|test).ts?(x)"
+      "<rootDir>/src/**/__tests__/**/*.ts?(x)",
+      "<rootDir>/(test|src)/**/?(*.)+(spec|test).ts?(x)"
     ],
     "clearMocks": true,
     "collectCoverage": true,
