--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@types/node": "^12",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
-    "aws-cdk": "^2.5.0",
+    "aws-cdk": "^2.8.0",
     "esbuild": "^0.14.11",
     "eslint": "^8",
     "eslint-import-resolver-node": "^0.3.6",
@@ -44,7 +44,9 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
-    "aws-cdk-lib": "^2.5.0",
+    "@aws-cdk/aws-kinesisfirehose-alpha": "^2.8.0-alpha.0",
+    "@aws-cdk/aws-kinesisfirehose-destinations-alpha": "^2.8.0-alpha.0",
+    "aws-cdk-lib": "^2.8.0",
     "constructs": "^10.0.5"
   },
   "license": "Apache-2.0",
