change to kinesis from firehose

--- a/src/containers/log-router/extra.conf
+++ b/src/containers/log-router/extra.conf
@@ -18,7 +18,13 @@
     log_stream_prefix firelens/
 
 [OUTPUT]
-    Name kinesis_firehose
+    Name kinesis_streams
     Match twitter.stream
     region ${AWS_REGION}
-    delivery_stream ${DELIVERY_STREAM_NAME}
+    stream ${STREAM_NAME}
+
+#[OUTPUT]
+#    Name kinesis_firehose
+#    Match twitter.stream
+#    region ${AWS_REGION}
+#    delivery_stream ${DELIVERY_STREAM_NAME}
