--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "@aws-cdk/aws-kinesisfirehose-alpha": "^2.8.0-alpha.0",
     "@aws-cdk/aws-kinesisfirehose-destinations-alpha": "^2.8.0-alpha.0",
     "aws-cdk-lib": "^2.8.0",
-    "constructs": "^10.0.5"
+    "constructs": "^10.0.5",
+    "yaml": "^1.10.2"
   },
   "license": "Apache-2.0",
   "version": "0.0.0",
