--- a/src/containers/log-router/extra.conf
+++ b/src/containers/log-router/extra.conf
@@ -17,6 +17,11 @@
     log_group_name ${LOG_GROUP_NAME}
     log_stream_prefix firelens/
 
+[FILTER]
+    Name record_modifier
+    Match twitter.stream
+    Record tag twitter.stream
+
 [OUTPUT]
     Name kinesis_streams
     Match twitter.stream
