--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -200,7 +200,7 @@
           "exec": "yarn install --check-files"
         },
         {
-          "exec": "yarn upgrade @types/jest @types/node @typescript-eslint/eslint-plugin @typescript-eslint/parser aws-cdk esbuild eslint-import-resolver-node eslint-import-resolver-typescript eslint-plugin-import eslint jest jest-junit json-schema npm-check-updates ts-jest ts-node typescript @aws-cdk/aws-kinesisfirehose-alpha @aws-cdk/aws-kinesisfirehose-destinations-alpha aws-cdk-lib constructs yaml"
+          "exec": "yarn upgrade @types/jest @types/node @typescript-eslint/eslint-plugin @typescript-eslint/parser aws-cdk esbuild eslint-import-resolver-node eslint-import-resolver-typescript eslint-plugin-import eslint jest jest-junit json-schema npm-check-updates ts-jest ts-node typescript @aws-cdk/aws-kinesisfirehose-alpha @aws-cdk/aws-kinesisfirehose-destinations-alpha @aws-lambda-powertools/logger @aws-sdk/client-comprehend @aws-sdk/client-kinesis @aws-sdk/client-translate @types/aws-lambda @types/bluebird aws-cdk-lib bluebird constructs yaml"
         },
         {
           "exec": "npx projen"
