--- a/package.json
+++ b/package.json
@@ -46,7 +46,14 @@
   "dependencies": {
     "@aws-cdk/aws-kinesisfirehose-alpha": "^2.8.0-alpha.0",
     "@aws-cdk/aws-kinesisfirehose-destinations-alpha": "^2.8.0-alpha.0",
+    "@aws-lambda-powertools/logger": "^0.3.1",
+    "@aws-sdk/client-comprehend": "^3.47.0",
+    "@aws-sdk/client-kinesis": "^3.47.1",
+    "@aws-sdk/client-translate": "^3.47.0",
+    "@types/aws-lambda": "^8.10.89",
+    "@types/bluebird": "^3.5.36",
     "aws-cdk-lib": "^2.8.0",
+    "bluebird": "^3.7.2",
     "constructs": "^10.0.5",
     "yaml": "^1.10.2"
   },
