use twitter api v2

--- a/src/containers/log-router/extra.conf
+++ b/src/containers/log-router/extra.conf
@@ -6,25 +6,32 @@
 
 [FILTER]
     Name parser
-    Match *-firelens-*
+    Match app-firelens-*
     Key_Name log
     Parser docker
 
+[FILTER]
+    Name rewrite_tag
+    Match app-firelens-*
+    Rule $category tweets/search/stream tweets.search.stream false
+
+[FILTER]
+    Name record_modifier
+    Match tweets.search.stream
+    Remove_key time
+    Remove_key level
+    Remove_key category
+
 [OUTPUT]
     Name cloudwatch_logs
-    Match *-firelens-*
+    Match app-firelens-*
     region ${AWS_REGION}
     log_group_name ${LOG_GROUP_NAME}
     log_stream_prefix firelens/
 
-[FILTER]
-    Name record_modifier
-    Match twitter.stream
-    Record tag twitter.stream
-
 [OUTPUT]
     Name kinesis_streams
-    Match twitter.stream
+    Match tweets.search.stream
     region ${AWS_REGION}
     stream ${STREAM_NAME}
 
