--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "aws-cdk-lib": "^2.8.0",
     "bluebird": "^3.7.2",
     "constructs": "^10.0.5",
+    "twitter-api-v2": "^1.9.1",
     "yaml": "^1.10.2"
   },
   "license": "Apache-2.0",
