--- a/src/containers/twitter-streaming-reader/package.json
+++ b/src/containers/twitter-streaming-reader/package.json
@@ -8,9 +8,8 @@
     "build": "./node_modules/typescript/bin/tsc"
   },
   "dependencies": {
-    "fluent-logger": "^3.4.1",
     "log4js": "^6.4.0",
-    "twit": "^2.2.11",
+    "twitter-api-v2": "^1.9.1",
     "typescript": "^4.5.5"
   },
   "devDependencies": {
