--- a/src/containers/twitter-streaming-reader/tsconfig.json
+++ b/src/containers/twitter-streaming-reader/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es2021",
     "module": "commonjs",
     "allowJs": true,
+    "rootDir": "./src/",
     "outDir": "./lib/",
     "strict": true,
     "esModuleInterop": true,
